<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeat_bg"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".ui.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:contentDescription="@string/app_name"
            android:src="@drawable/circle_show" />

        <TextView
            android:id="@+id/tvDeclare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/short_desc"
            android:textStyle="bold"
            android:textColor="@color/md__defaultBackground" />
        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/text_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="20dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/selector_top"
            android:clickable="true"
            android:onClick="sendMail">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:text="@string/about_author_email"
                android:textColor="@color/about_text_left_selector"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:text="@string/about_author_email_c"
                android:textColor="@color/about_text_right_selector"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/selector_middle"
            android:clickable="true"
            android:onClick="onWeiboClick">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:text="@string/about_author_weibo"
                android:textColor="@color/about_text_left_selector"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:text="@string/about_author_weibo_c"
                android:textColor="@color/about_text_right_selector"
                android:textSize="14sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/selector_middle"
            android:clickable="true"
            android:onClick="onRecommendClick">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:text="@string/about_recommend"
                android:textColor="@color/about_text_left_selector"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:src="@drawable/arrow"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/selector_middle"
            android:clickable="true"
            android:onClick="onOfficialWebsite">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:text="@string/about_official_website"
                android:textColor="@color/about_text_left_selector"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:focusable="false"
                android:text="@string/web_site"
                android:textColor="@color/about_text_right_selector" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bottom"
            android:clickable="true"
            android:onClick="onUpdateClick">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:text="@string/about_check_update"
                android:textColor="@color/about_text_left_selector"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/ivNewVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:focusable="false"
                android:gravity="center"
                android:src="@drawable/circle_update"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
