<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeat_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lxy.liying.circletodo.ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivLoginIcon"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/unlogin" />

        <EditText
            android:id="@+id/etLoginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:drawableLeft="@drawable/username"
            android:hint="请输入用户名"
            android:inputType="text" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/password"
            android:hint="请输入密码"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_cleanup_selector"
            android:text="登录"
            android:textColor="@color/dark_text_selector" />

        <TextView
            android:id="@+id/tvToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:onClick="toRegister"
            android:padding="10dp"
            android:text="@string/register_link"
            android:textColor="@color/register_text_selector"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvToResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:onClick="toResetPassword"
            android:padding="10dp"
            android:text="@string/reset_password_link"
            android:textColor="@color/reset_password_text_selector"
            android:textSize="14sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvToResetPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:onClick="toResetPasswordLogin"
            android:padding="10dp"
            android:text="@string/reset_password_login_link"
            android:textColor="@color/reset_password_text_selector"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvToLoginByEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:onClick="toLoginByEmail"
            android:padding="10dp"
            android:text="@string/login_by_email_link"
            android:textColor="@color/register_text_selector"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>
